--- a/src/css/less/bootstrap/rules/nav-pills.less
+++ b/src/css/less/bootstrap/rules/nav-pills.less
@@ -53,10 +53,6 @@
       }
     }
 
-    .dropdown-menu{
-      margin-top: 0;
-    }
-
     &.dropdown.open{
       > a{
         color: @ls-light-color;
