--- a/src/css/less/bootstrap/rules/navbar.less
+++ b/src/css/less/bootstrap/rules/navbar.less
@@ -372,3 +372,11 @@
 
 }
 
+/*Bootstrap default navbar-nav*/
+.navbar-nav{
+   > li{
+    > .dropdown-menu {
+    
+    }
+  }
+}
