--- a/src/css/less/bootstrap/rules/panels.less
+++ b/src/css/less/bootstrap/rules/panels.less
@@ -81,10 +81,6 @@
       
       .btn-group {
 	      top:-2px;
-
-        .dropdown-menu{
-          margin-top: 0;
-        }
       }
       
       button{
