--- a/src/css/less/livescore/rules/ls-top-breadcrumbs.less
+++ b/src/css/less/livescore/rules/ls-top-breadcrumbs.less
@@ -53,7 +53,6 @@
     }
     
     .dropdown-menu{
-      margin-top: 0;
       left: 17px;
       
       /*This is only a temporal solution*/
